--- a/packages/base/interface/fragments/displayBodyContent.jspf
+++ b/packages/base/interface/fragments/displayBodyContent.jspf
@@ -1,19 +1,34 @@
 <%--
-    TODO: Document.
-    ... In general, this file should not need to be modified.
+    This file should be included in any bundle or package pages that render a
+    Kinetic SR form in display mode.  The file defines the HTML body content
+    responsible for rendering the Kinetic form to the client.
+
+    This file includes the current Kinetic SR form page content.  The page
+    content, which will typically include one or more questions and a submit or
+    next page button, is displayed within the pageQuestionsForm.  This HTML form
+    will send the answer content to the Kinetic SubmitPage servlet for
+    processing.  This servlet will typically send a HTTP (302) Moved response
+    to redirect the client to the next page.
+
+    In general, this file should not be modified.
 --%>
+<!-- START Kinetic Form Content -->
 <form name='pageQuestionsForm' id='pageQuestionsForm' class='pageQuestionsForm' method='post' action='SubmitPage'>
+    <!-- Kinetic SR Form Page Content -->
     <jsp:getProperty name="customerSurvey" property="questions"/>
 
-    <% if (request.getParameter("srv") != null) {%>
+    <!-- Kinetic SR Reference Values -->
+    <% if (request.getParameter("srv") != null) { %>
     <input type="hidden" name="srv" value="<%=request.getParameter("srv")%>"/>
-    <%}%>
-    <% if (request.getParameter("csrv") != null) {%>
+    <% } %>
+    <% if (request.getParameter("csrv") != null) { %>
     <input type="hidden" name="csrv" value="<%=request.getParameter("csrv")%>"/>
-    <%}%>
+    <% } %>
 
-    <input type="hidden" name="templateID" id= "templateID" value="<jsp:getProperty name="customerSurvey" property="surveyTemplateInstanceID"/>"/>
-    <input type="hidden" name="sessionID" id="sessionID" value="<jsp:getProperty name="customerSurvey" property="customerSessionInstanceID"/>"/>
-    <input type="hidden" name="surveyRequestID" id="surveyRequestID" value="<jsp:getProperty name="customerSurvey" property="customerSurveyRequestID"/>"/>
-    <input type="hidden" name="pageID" id="pageID"value="<jsp:getProperty name="customerSurvey" property="pageInstanceID"/>"/>
+    <!-- Kinetic SR State Values -->
+    <input type="hidden" name="templateID" id= "templateID" value="<%=customerSurvey.getSurveyTemplateInstanceID()%>"/>
+    <input type="hidden" name="sessionID" id="sessionID" value="<%=customerSurvey.getCustomerSessionInstanceID()%>"/>
+    <input type="hidden" name="surveyRequestID" id="surveyRequestID" value="<%=customerSurvey.getCustomerSurveyRequestID()%>"/>
+    <input type="hidden" name="pageID" id="pageID"value="<%=customerSurvey.getPageInstanceID()%>"/>
 </form>
+<!--   END Kinetic Form Content -->
