--- a/core/framework/models/kineticRequest/Catalog.jspf
+++ b/core/framework/models/kineticRequest/Catalog.jspf
@@ -1,4 +1,7 @@
 <%!
+    /**
+     * Class: Catalog
+     */
     public static class Catalog {
         public static final String FORM_NAME = "KS_RQT_ServiceCatalog_base";
         public static final String FIELD_DESCRIPTION = "702020006";
