added content for catalog package, worked on common fragments, added catalog search library

--- a/common/config/config.jspf
+++ b/common/config/config.jspf
@@ -4,5 +4,5 @@
     NOTE: This file is required.
 --%>
 <%
-    bundle.setProperty("companyName", "ACME");
+    bundle.setProperty("companyName", "Sithco");
 %>
