--- a/common/interface/fragments/contentFooter.jspf
+++ b/common/interface/fragments/contentFooter.jspf
@@ -1,3 +1,6 @@
 <div id="contentFooter">
-    
+    <a href="javascript:void(0)">Kinetic Data</a> | 
+    <a href="javascript:void(0)">Google</a> | 
+    <a href="javascript:void(0)">Apple</a> | 
+    <a href="javascript:void(0)">CNN</a>
 </div>
