--- a/common/interface/fragments/contentHeader.jspf
+++ b/common/interface/fragments/contentHeader.jspf
@@ -1,5 +1,9 @@
 <div id="contentHeader">
-    <div class="logo"></div>
-    <div class="bar"></div>
-    <div class="dropshadow"></div>
+    <img src="<%= bundle.bundlePath()%>/common/resources/images/SithcoLogo.png"></img>
+    <% if (context != null) {%>
+    <div class="userInfo">logged in as <a href="javascript:void(0)">Demo</a> | <a href="javascript:void(0)">logout</a></div>
+    <% } else {%>
+    <div class="userInfo">not logged in | <a href="javascript:void(0)">login</a></div>
+    <% }%>
+    <div class="clear"></div>
 </div>
