--- a/common/resources/css/common.css
+++ b/common/resources/css/common.css
@@ -1,7 +1,7 @@
 html {
     background: #FFFFFF url('../images/background.png') repeat-x top;
-    font-family: Calibri, Geneva, sans-serif; 
-    font-size: 14px;
+    font-family: Verdana, sans-serif; 
+    font-size: 12px;
     height: 100%;
     margin: 0;
     padding: 0;
