modified to set catalogName config from the customerRequest object, modified to center content accross all browsers, fixed display issue withcontentHeader

--- a/common/config/config.jspf
+++ b/common/config/config.jspf
@@ -5,4 +5,5 @@
 --%>
 <%
     bundle.setProperty("companyName", "Sithco");
+    bundle.setProperty("catalogName", customerRequest.catalogName());
 %>
