--- a/common/interface/fragments/contentHeader.jspf
+++ b/common/interface/fragments/contentHeader.jspf
@@ -1,5 +1,5 @@
 <div id="contentHeader">
-    <img src="<%= bundle.bundlePath()%>/common/resources/images/SithcoLogo.png"></img>
+    <img class="logo" src="<%= bundle.bundlePath()%>/common/resources/images/SithcoLogo.png"></img>
     <% if (context != null) {%>
     <div class="userInfo">logged in as <a href="javascript:void(0)">Demo</a> | <a href="javascript:void(0)">logout</a></div>
     <% } else {%>
