updated content footer links (see enhancement #1918)

--- a/common/interface/fragments/contentFooter.jspf
+++ b/common/interface/fragments/contentFooter.jspf
@@ -1,6 +1,5 @@
 <div id="contentFooter">
-    <a href="javascript:void(0)">Kinetic Data</a> | 
-    <a href="javascript:void(0)">Google</a> | 
-    <a href="javascript:void(0)">Apple</a> | 
-    <a href="javascript:void(0)">CNN</a>
+    <a href="http://www.kineticdata.com/">Kinetic Data</a> | 
+    <a href="http://community.kineticdata.com/">Kinetic Community</a> | 
+    <a href="http://www.kineticdata.com/AboutUs/ContactUs.html">Contact Us</a>
 </div>
